@@ -114,6 +114,7 @@ wxMSW:
 
 - Fix keyboard support in wxSpinCtrl broken in 2.8.8.
 - Compile fix for WinCE in window.cpp (no VkKeyScan in Windows CE).
+- Fix quoting of arguments passed to wxExecute(char **) (briis).
 
 wxGTK:
 
